# social-network

./: Dockerfile  Makefile  README.md  constants.py  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 680eaed17304_added_models.py  ab0447753dcc_add_unique_login.py
src/: models.py
src/api/: serializers.py
src/api/views/: auth.py  cities.py  health.py  relations.py  users.py
src/app/: app.py  db.py  logging_config.py  settings.py
src/services/: auth.py  cities.py  users.py
